# adabraka-gpui

./: .claude-tasks.md  .gitignore  CHANGELOG.md  Cargo.toml  PERF_OPTIMIZATION_PLAN.md  README.md  bench_compare.sh
crates/collections/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/derive_refineable/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/gpui/: .cargo_vcs_info.json  Cargo.toml
crates/gpui-macros/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/gpui-macros/src/: styles.rs
crates/gpui/examples/: daemon_app.rs  perf_bench.rs
crates/gpui/src/: app.rs  color.rs  geometry.rs  platform.rs  scene.rs  style.rs  styled.rs  text_system.rs  window.rs
crates/gpui/src/elements/: div.rs  toast.rs
crates/gpui/src/platform/: linux.rs  mac.rs  single_instance.rs  windows.rs
crates/gpui/src/platform/blade/: shaders.wgsl
crates/gpui/src/platform/linux/: auto_launch.rs  global_hotkey.rs  platform.rs  tray.rs
crates/gpui/src/platform/linux/wayland/: client.rs  window.rs
crates/gpui/src/platform/linux/x11/: client.rs  window.rs
crates/gpui/src/platform/mac/: biometric.rs  dialog.rs  dock.rs  global_hotkey.rs  metal_renderer.rs  network.rs  os_info.rs  permissions.rs  platform.rs  power.rs  shaders.metal  tray.rs  window.rs
crates/gpui/src/platform/windows/: active_window.rs  directx_renderer.rs  events.rs  global_hotkey.rs  network.rs  os_info.rs  platform.rs  power.rs  shaders.hlsl  tray.rs  window.rs
crates/gpui/src/text_system/: line_layout.rs
crates/http_client/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/media/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/perf/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/refineable/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/semantic_version/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/sum_tree/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/util/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/util_macros/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/util_macros/src/: util_macros.rs
docs/plans/: 2026-02-14-murmur-gpui-extensions-design.md  2026-02-14-murmur-gpui-implementation-plan.md  2026-02-15-desktop-platform-features-design.md
