[package]
edition = "2024"
name = "adabraka-gpui-macros"
version = "0.5.0"
publish = true
description = "Macros used by Adabraka GPUI (originally from Zed - github.com/zed-industries/zed)"
authors = ["Adabraka Team"]
repository = "https://github.com/Augani/adabraka-gpui"
readme = false
license = "Apache-2.0"

[features]
inspector = []

[lib]
name = "adabraka_gpui_macros"
path = "src/gpui_macros.rs"
doctest = true
proc-macro = true

[[test]]
name = "derive_context"
path = "tests/derive_context.rs"

[[test]]
name = "derive_inspector_reflection"
path = "tests/derive_inspector_reflection.rs"

[[test]]
name = "render_test"
path = "tests/render_test.rs"

[dependencies.heck]
version = "0.5"

[dependencies.proc-macro2]
version = "1.0.93"

[dependencies.quote]
version = "1.0.9"

[dependencies.syn]
version = "2.0.101"
features = [
    "full",
    "extra-traits",
    "visit-mut",
]


[dev-dependencies]

[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
