[package]
edition = "2024"
name = "adabraka_refineable"
version = "0.5.1"
publish = true
description = "A macro for creating 'refinement' types (originally from Zed - github.com/zed-industries/zed)"
authors = ["Adabraka Team"]
repository = "https://github.com/Augani/adabraka-gpui"
readme = false
license = "Apache-2.0"

[lib]
name = "adabraka_refineable"
path = "src/refineable.rs"
doctest = false

[dependencies.derive_refineable]
path = "../derive_refineable"
package = "adabraka_derive_refineable"
version = "0.5.1"


[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
