[package]
edition = "2024"
name = "adabraka_semantic_version"
version = "0.3.0"
publish = true
description = "A library for working with semantic versioning (originally from Zed - github.com/zed-industries/zed)"
authors = ["Adabraka Team"]
repository = "https://github.com/AugustusOtu/adabraka-gpui"
readme = false
license = "Apache-2.0"

[lib]
name = "adabraka_semantic_version"
path = "src/semantic_version.rs"

[dependencies.anyhow]
version = "1.0.86"

[dependencies.serde]
version = "1.0.221"
features = [
    "derive",
    "rc",
]


[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
