[package]
edition = "2024"
name = "adabraka_sum_tree"
version = "0.4.0"
publish = true
description = "A sum tree data structure, a concurrency-friendly B-tree (originally from Zed - github.com/zed-industries/zed)"
authors = ["Adabraka Team"]
repository = "https://github.com/Augani/adabraka-gpui"
readme = false
license = "Apache-2.0"

[lib]
name = "adabraka_sum_tree"
path = "src/sum_tree.rs"
doctest = false

[dependencies.arrayvec]
version = "0.7.1"

[dependencies.log]
version = "0.4.16"
features = [
    "kv_unstable_serde",
    "serde",
]

[dependencies.rayon]
version = "1.8"


[dev-dependencies.ctor]
version = "0.4.0"

[dev-dependencies.rand]
version = "0.9"

[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
