[package]
edition = "2024"
name = "adabraka_util_macros"
version = "0.5.0"
publish = true
description = "Utility macros for Adabraka GPUI (originally from Zed - github.com/zed-industries/zed)"
authors = ["Adabraka Team"]
repository = "https://github.com/Augani/adabraka-gpui"
readme = false
license = "Apache-2.0"

[features]
perf-enabled = ["perf"]

[lib]
name = "adabraka_util_macros"
path = "src/util_macros.rs"
doctest = false
proc-macro = true

[dependencies.perf]
path = "../perf"
package = "adabraka_perf"
version = "0.5.0"
optional = true

[dependencies.quote]
version = "1.0.9"

[dependencies.syn]
version = "2.0.101"
features = [
    "full",
    "extra-traits",
    "visit-mut",
]


[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
